@@ -1,5 +1,5 @@
-AUX converseen-0.1.1-cflags.patch 436 RMD160 a8516f6f3371515a6b18befbcd35d1847a33332a SHA1 26a04c0044ae71a34669e23b57a72f4a4bf2cec4 SHA256 9198886807cebd87ffc103751ac18965a3bf75c2ab78ed915c7e0d430934b5af
-DIST converseen_0.1.1.tar.bz2 137206 RMD160 f5e0aab3b3241e68d42c2d82eb751ccbda3d0626 SHA1 4ec935a82814954cad821def94dbcac0f136c50a SHA256 50821e6e6f206e026eeb9198509ee949d56754fa4fc6c590ab7df19fc5053eea
-EBUILD converseen-0.1.1-r1.ebuild 1069 RMD160 fdb6b88dc2b03d1ef69b84003746f30095860275 SHA1 aee7bd79ce19c9417d68fd5e7451f3c086a8e898 SHA256 32ae21de9bb4d6662bb5aa3f7d944004dd99fb3c7ab16c485a8d8d5e6cd22c15
-MISC ChangeLog 511 RMD160 6535831b5230f2a1194da45e39238446184488e0 SHA1 1d595e29bdd27f4de9900fcfc5204b421e3374df SHA256 6262e1a8bb8f4e895db57ff5e041d2e8b96a726242b2285c727d8237a7746ce8
+AUX converseen-0.2-cflags.patch 436 RMD160 a8516f6f3371515a6b18befbcd35d1847a33332a SHA1 26a04c0044ae71a34669e23b57a72f4a4bf2cec4 SHA256 9198886807cebd87ffc103751ac18965a3bf75c2ab78ed915c7e0d430934b5af
+DIST converseen_0.2.tar.bz2 142907 RMD160 5b41863d44059693b1fb34ffc7f0f259c784c1c6 SHA1 d564af67050defe4a1fef639cb2bb75207332fd7 SHA256 4ae49ffdf631bccc0b9c7d245c3c20f6b983457cca6ce80f53705585d7276a2c
+EBUILD converseen-0.2.ebuild 1093 RMD160 c8e79f817d59af746ee72cfcc1fb8030629c48a9 SHA1 06b80a8e2b8ce0301b80758b92ce3c0476bdc898 SHA256 0fbdb213d31f6a141297f34a18fb33cb1776fc057cf2621c19dd4c0f7782f9d0
+MISC ChangeLog 750 RMD160 24a0c57614f32d11c9eba4f380312156d5bee9dd SHA1 74adf864daf3dda33daceb0b4fa6e92978cc5113 SHA256 93569899af66e50d57bebb5abcbcaef5c4d67094430a1b55b4af7ed666a1831d
 MISC metadata.xml 299 RMD160 2817d6e5370fefb9f2696eb770c9ff49399d6744 SHA1 f7badb6c31b2bf048766ad33bfda5b957fb32c2f SHA256 3c3fbe2f47e5a8e7ff708d354dd82f18b10e8dfd84dfa1673a8f95dd4a07eac2
