@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*converseen-0.2 (21 Nov 2009)
+
+  21 Nov 2009; Dominik Kapusta <ayoy@gentoo.org>
+  -converseen-0.1.1-r1.ebuild, -files/converseen-0.1.1-cflags.patch,
+  +converseen-0.2.ebuild, +files/converseen-0.2-cflags.patch:
+  Version bump, remove old
+
 *converseen-0.1.1-r1 (04 Oct 2009)
 
   04 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> -converseen-0.1.1.ebuild,
